Imagenes nuevas y modificacion del index y Estilo

--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -28,3 +28,10 @@ body {
 .btn-huerto:hover {
     background-color: #5D8736 !important;
 }
+/*Las imagen quedan fijas*/
+.producto-img {
+  width: 200px;         
+  height: 200px;        
+  object-fit: cover;    
+  border-radius: 50%;    
+}
