--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -2,23 +2,40 @@
 body {
     background-color: #F4FFC3;
     font-family: Arial, sans-serif;
+    padding-top: 70px;
 }
 
-/* Navbar con verde oscuro */
+/* Navbar base */
 .navbar-huerto {
-    background-color: #5D8736 !important;
+  background: rgb(28, 94, 24);
+  transition: background 0.3s ease;
+  padding: 10px 20px;
 }
 
-.navbar-huerto .navbar-brand,
+/* Navbar al hacer scroll */
+.navbar-huerto.transparent {
+  background: rgba(35, 118, 35, 0.6); 
+  backdrop-filter: blur(5px);
+}
+
+/* Marca (logo + texto) */
+.brand-text {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: #fff;
+}
+
+/* Links del navbar */
 .navbar-huerto .nav-link {
     color: #fff !important;
+    margin-right: 10px;
 }
 
 .navbar-huerto .nav-link:hover {
-    color: #A9C46C !important;
+    color: #FFD700 !important;
 }
 
-/* Botón estilo huerto */
+/* Botón Buscar */
 .btn-huerto {
     background-color: #809D3C !important;
     color: #fff !important;
@@ -28,10 +45,37 @@ body {
 .btn-huerto:hover {
     background-color: #5D8736 !important;
 }
-/*Las imagen quedan fijas*/
+
+/* Íconos carrito/corazón */
+.icon-link {
+    font-size: 1.4rem;
+    color: #fff;
+    position: relative;
+}
+
+.icon-link:hover {
+    color: #FFD700;
+}
+/* Contadores de carrito y favoritos */
+.badge {
+  font-size: 0.7rem;
+  position: absolute;
+  top: -8px;
+  right: -10px;
+  border-radius: 50%;
+  padding: 5px 7px;
+}
+
+/* Carrusel */
+.carousel-item img {
+    width: 100%;
+    object-fit: cover;
+    height: 100vh;
+}
 .producto-img {
-  width: 200px;         
-  height: 200px;        
-  object-fit: cover;    
-  border-radius: 50%;    
+  width: 100%;
+  height: 220px;
+  object-fit: contain;
+  background-color: #fff;
+  border-radius: 12px;
 }
