Fase 1 de Carrito de compra,ultimos detalles en productos

--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -79,3 +79,45 @@ body {
   background-color: #fff;
   border-radius: 12px;
 }
+
+/* Para que quede cuadrado y sin deformar */
+.img-cuadrada {
+  position: relative;
+  width: 100%;
+  padding-top: 100%; 
+  overflow: hidden;
+
+}
+.img-cuadrada img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  border-radius: 2px;
+}
+.img-cuadrada .card-img-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  border-radius: 2px;
+}
+/*Para cambiar las letritas*/
+#consejo-titulo {
+  font-size: 2rem;      
+  font-weight: bold;
+  color: #fff;        
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.6); 
+}
+#consejo-texto {
+  font-size: 1.3rem;   
+  color: #f1f1f1;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+}
