Problemas tecnicos solucionados

--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -1,6 +1,6 @@
 /* Fondo de la página */
 body {
-    background-color: #F4FFC3;
+    background-color: #e4e4e4;
     font-family: Arial, sans-serif;
     padding-top: 70px;
 }
